Project project_name {
  database_type: 'MySQL'
  Note: 'Base de datos para pagina web de creacion de votaciones.'
}

Table usuarios [headercolor: #000000] {
  id integer [pk, increment]
  username varchar(50) [not null, unique]
  password varchar(255) [not null]
  nombre varchar(50) [not null]
  apellidos varchar(100) [not null]
  email varchar(100) [not null, unique]
  num_telefono integer [not null, unique]
  provincia varchar(50) [not null]
  ciudad varchar(50) [not null]
  fecha_creacion timestamp [default: 'now()']
}

Table votaciones [headercolor: #000000] {
  id integer [pk, increment]
  id_autor integer [not null]
  titulo varchar(100) [not null]
  descripcion text
  fecha_creacion timestamp [not null, default: 'now()']
  fecha_inicio timestamp [not null]
  fecha_final timestamp [not null]
  cerrada bool [not null, default: false]
  razon_cierre text
}
Ref: votaciones.id_autor > usuarios.id [delete: cascade, update: no action]

Table opciones [headercolor: #000000] {
  id integer [pk, increment]
  id_votacion integer [not null]
  nombre_opcion varchar(50) [not null]
  desc_opcion text
}
Ref: opciones.id_votacion > votaciones.id [delete: cascade, update: no action]

Table votos [headercolor: #000000] {
  id integer [pk, increment]
  id_votacion integer [not null]
  id_votante integer [not null]
  id_opcion integer [not null]
  fecha_voto timestamp [not null, default: 'now()']
  
  indexes {
    (id_votacion, id_votante) [unique]
  }
}
Ref: votos.id_votacion > votaciones.id [delete: cascade, update: no action]
Ref: votos.id_votante > usuarios.id [delete: cascade, update: no action]
Ref: votos.id_opcion > opciones.id [delete: cascade, update: no action]